# pantry-pirate-radio

./: .aiderules  .dockerignore  .env.example  .env.github-actions  .env.test  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.docker.yaml  .pre-commit-config.yaml  .prettierrc  .safety-policy.yml  .vulture_whitelist  .vulture_whitelist.py  API_DOCUMENTATION.md  BOUY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_VALIDATION_PIPELINE_HANDOFF.md  Dockerfile  LICENSE  MAP_SEARCH_API.md  PRIVACY.md  README.md  RELEASE_NOTES_v0.2.md  RELEASE_NOTES_v1.md  SECURITY.md  add_map_search_indexes.sql  api_issues_current.json  api_issues_summary.md  api_test_findings.md  api_test_report.html  api_test_results_20250909_045105.json  architecture-diagram-options.md  bouy  bouy-api  bouy-functions.sh  claude_setup_guide.md  comprehensive_api_test.py  (+32 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.backup  init-dev-environment.sh  prebuild.sh  shared-env-setup.sh
.docker/: README.md
.githooks/: pre-commit
.github/: CODEOWNERS  RELEASE_SECURITY_CHECKLIST.md  pull_request_template.md  settings.yml
.husky/: pre-commit
.pirate/: rewrite-feasibility-report.md  rewrite-research-plan.md  technical-debt-reduction-plan.md
.serena/: project.yml
app/: __init__.py  claude_auth_manager.py  claude_health_server.py  main.py
config/: __init__.py  defaults.yml  op.conf  op.conf.example
docs/: DOCUMENTATION_REVIEW_SUMMARY.md  GITHUB_SECURITY_SETTINGS.md  GITHUB_WORKFLOWS.md  INDEX.md  README.md  RELEASE_NOTES_v1.md  api-examples.md  api.md  architecture.md  aws-deployment.md  codespaces-setup.md  consumer-api-specification.md  content-store-protection-fixes.md  data-publishing-pipeline.md  data-repository-sync.md  database-backup.md  datasette-github-publishing.md  datasette.md  deployment.md  docker-development.md  docker-quickstart.md  docker-startup-sequence.md  getting-started-locally.md  github-settings-migration.md  haarrrvest-publisher.md  haarrrvest-repository-optimization.md  haarrvest-quickstart.md  hsds_index.md  llm.md  llm_update_needed.md  multi-worker-support.md  quickstart.md  reconciler.md  recorder.md  scraper-patterns.md  scrapers.md  setup-github-pages-data.md  submarine.md  test-environment-setup.md  testing-private-scrapers.md  (+3 more)
dotfiles/: .aliases  .bashrc  .zshrc  README.md  install.sh
examples/: README.md  docker-automation.py
infra/: .dockerignore  CLAUDE.md  Dockerfile  app.py  cdk.context.json  cdk.json  plugin_discovery.py  requirements.txt  shared_config.py
init-scripts/: 00-init-db.sql  02-spatial-index.sql  03-version-tracking.sql  04-source-specific-records.sql  05-race-condition-fixes.sql  06-validation-fields.sql  07-add-timestamps.sql  08-fix-organization-constraint.sql  09-human-updates.sql  10-submarine.sql  11-verification-fields.sql  12-claimed-verified-by.sql  13-feeding-america-zip-coverage.sql  14-ptf-locations-indexes.sql  15-schedule-location-index.sql  16-federation-log.sql
plugins/: custom_nav.py  datasette_custom_nav.py  setup.py
plugins/ppr-beacon/: CLAUDE.md  constitution.md  plugin.yml  pyproject.toml
plugins/ppr-beacon/.docker/: Dockerfile  compose.yml
plugins/ppr-beacon/app/: __init__.py  analytics_handler.py  builder.py  cli.py  config.py  data_source.py  models.py  renderer.py  schema_org.py  sitemap.py  slug.py
plugins/ppr-beacon/commands/: build.sh  serve.sh  status.sh
plugins/ppr-beacon/infra/: beacon_stack.py
plugins/ppr-beacon/infra/athena_queries/: create_table.sql  daily_traffic.sql  geographic_distribution.sql  page_views_by_location.sql  top_pages.sql
plugins/ppr-beacon/infra/tests/: test_beacon_stack.py
plugins/ppr-beacon/static/css/: beacon.css
plugins/ppr-beacon/static/js/: beacon-analytics.js
plugins/ppr-beacon/templates/: base.html  city.html  home.html  location.html  organization.html  state.html
plugins/ppr-beacon/templates/partials/: footer.html  header.html
plugins/ppr-beacon/tests/: test_data_source.py  test_models.py  test_renderer.py  test_schema_org.py  test_sitemap.py  test_slug.py
scripts/: backfill_missing_states.py  backfill_null_org_from_record_version.py  backfill_service_at_location.py  build_ptf_fa_catalogue.py  check-haarrrvest-repo.sh  claude_worker.py  cleanup-content-store.py  cleanup_content_store_since_date.py  container_startup.sh  content-store-dashboard.sh  coverage-analyze.sh  coverage-check.sh  coverage-report.sh  create-sql-dump.sh  data_quality_map.html  data_quality_map_export.py  data_quality_map_scrapers.tsv  datasette-lite-template.html  dedupe_near_duplicate_locations.py  dedupe_same_org_locations.py  dev-down.sh  dev-shell.sh  dev-test.sh  dev-up.sh  dev.sh  docker-entrypoint.sh  drop_food_helpline_data.sql  evaluate_llm_models.py  fix_bad_zip_codes.py  fix_city_as_location_name.py  fix_state_codes.sql  fix_state_mismatches.py  generate_scraper_jobs.py  generate_state_grids.py  init-data-repo.sh  init-database.sh  inspect_dedup_merge_preview.py  list_scrapers.py  migrate_to_source_records.py  multi_worker.sh  (+19 more)
sql_dumps/: .gitkeep
templates/: scraper_template.py.jinja2  test_scraper_template.py.jinja2
tests/: README_BOUY_TESTS.md  analyze_bouy_coverage.py  bouy_coverage_report.md  conftest.py  pytest-bouy.ini  test_api_canonical_filter.py  test_api_consumer_canonical.py  test_api_endpoints_unit.py  test_api_integration_simple.py  test_api_logic_patterns.py  test_api_map_ptf_canonical.py  test_api_pagination_order.py  test_api_router_edge_cases.py  test_api_router_imports.py  test_api_schedule_failsoft.py  test_api_utils_coverage.py  test_api_utils_unit.py  test_app_main_unit.py  test_backfill_null_org_from_record_version.py  test_beacon_redirects.py  test_beacon_sync.py  test_bouy.sh  test_bouy_docker.py  test_bouy_integration.py  test_bouy_simplified.py  test_bouy_unit.py  test_claude_auth_manager.py  test_claude_health_server.py  test_config_cors.py  test_content_store_audit_fixes.py  test_content_store_main.py  test_coverage_boost.py  test_data.json  test_database_imports.py  test_grid.py  (+49 more)
(+951 files in other folders)
